# c-project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  Pipfile  README.md  calc_8cpp.html  calc_8hpp.html  calc_8hpp_source.html  conanfile.py  dir_08cfc5907b6bc8a47647d94023e5b6c3.html  dir_3287a2dd6532f219b0a722cfd239e889.html  dir_388bfdd5262c205f8f78f643dc0fea42.html  dir_52d9096e89d40bbd93a0739e1e6f6bf2.html  dir_53adf0b982dc8545998aae3f283a5a58.html  dir_566b6d132117d28746d6c154fb5c73a8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87a455bccb09a92130c26a11a880c98a.html  dir_bc118f69f2ec9d82bb7366ef76044ab5.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html  main  main_8cpp.html  menudata.js  namespaceCalc.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  test_2153  test_2153_B  test_2154  (+12 more)
.github/workflows/: documentations.yml  pre-commit.yml  ubuntu.yml
cmake/: AddGitSubmodule.cmake  CPM.cmake  CodeCoverage.cmake  ConanProvider.cmake  ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Memcheck.cmake  Sanitizer.cmake  SubDirList.cmake  Tools.cmake  Warnings.cmake
docs/: Doxyfile
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt
src/apps/calc_console/: CMakeLists.txt  main.cpp  tui.cpp
src/apps/calc_console/include/tui/: tui.hpp
src/libs/: CMakeLists.txt
src/libs/calc/: CMakeLists.txt  calc.cpp
src/libs/calc/include/calc/: calc.hpp
src/problems/: CMakeLists.txt
src/problems/codechef/: CMakeLists.txt
src/problems/codechef/starters_187_a/: main.cpp
src/problems/codechef/starters_187_a/data/: input.txt  (+1 more)
src/problems/codechef/starters_187_b/: main.cpp
src/problems/codechef/starters_187_c/: main.cpp
src/problems/codechef/starters_187_d/: main.cpp
src/problems/codechef/training_max_diff/: main.cpp
src/problems/codeforces/: CMakeLists.txt
src/problems/codeforces/14_problem_A/: main.cpp
src/problems/codeforces/16_problem_B/: main.cpp
src/problems/codeforces/2153_problem_A/: main.cpp
src/problems/codeforces/2153_problem_B/: main.cpp
src/problems/codeforces/2154_problem_A/: main.cpp
src/problems/codeforces/2155_problem_A/: main.cpp
src/problems/codeforces/2171_problem_A/: main.cpp
src/problems/codeforces/2172_problem_E/: main.cpp
src/problems/codeforces/2173_problem_A/: main.cpp
src/problems/codeforces/2173_problem_B/: main.cpp
src/problems/codeforces/2175_problem_A/: main.cpp
src/problems/codeforces/2176_problem_A/: main.cpp
src/problems/codeforces/2180_problem_A/: main.cpp
src/problems/codeforces/2180_problem_B/: main.cpp
src/problems/codeforces/2181_problem_A/: main.cpp
src/problems/codeforces/2183_problem_A/: main.cpp
src/problems/codeforces/2184_problem_A/: CMakeLists.txt  main.cpp
src/problems/codeforces/2185_problem_A/: main.cpp
src/problems/codeforces/2185_problem_B/: CMakeLists.txt  main.cpp
src/problems/codeforces/2188_problem_B/: CMakeLists.txt  main.cpp  test
src/problems/codeforces/2188_problem_B/data/: input.txt
src/problems/codeforces/2189_problem_A/: main.cpp
src/problems/codeforces/2193_problem_A/: main.cpp  test_solution
src/problems/codeforces/2193_problem_B/: main.cpp
src/problems/codeforces/22_problem_A/: main.cpp
src/problems/codeforces/231_problem_A/: main.cpp
src/problems/codeforces/24_problem_A/: CMakeLists.txt  main.cpp
src/problems/codeforces/25_problem_B/: input.txt  main.cpp
src/problems/codeforces/26_problem_A/: main.cpp
src/problems/codeforces/29_problem_A/: main.cpp
src/problems/codeforces/30_problem_A/: CMakeLists.txt  main.cpp
src/problems/codeforces/31_problem_A/: main.cpp
src/problems/codeforces/32_problem_A/: main.cpp
src/problems/codeforces/33_problem_A/: CMakeLists.txt  main.cpp
src/problems/codeforces/33_problem_A/data/: input.txt
src/problems/codeforces/34_problem_A/: CMakeLists.txt  main.cpp
src/problems/codeforces/38_problem_A/: main.cpp
src/problems/codeforces/3_problem_A/: input.txt  main.cpp
src/problems/codeforces/48_problem_A/: main.cpp
src/problems/codeforces/4_problem_A/: main.cpp
src/problems/codeforces/546_problem_A/: main.cpp
src/problems/codeforces/54_problem_A/: main.cpp
src/problems/codeforces/62_problem_A/: main.cpp
src/problems/codeforces/63_problem_A/: main.cpp
src/problems/codeforces/63_problem_B/: main.cpp
src/problems/codeforces/6_problem_B/: main.cpp
src/problems/codeforces/75_problem_A/: main.cpp
src/problems/codeforces/9_problem_A/: main.cpp
src/problems/cses/: CMakeLists.txt
src/problems/cses/problem_1068/: main.cpp
src/problems/cses/problem_1072/: main.cpp
src/problems/cses/problem_1083/: main.cpp
src/problems/cses/problem_1092/: main.cpp
src/problems/cses/problem_1612/: main.cpp
src/problems/cses/problem_1618/: CMakeLists.txt  main.cpp
src/problems/cses/problem_1634/: main.cpp
src/problems/cses/problem_1635/: main.cpp
src/problems/cses/problem_1636/: main.cpp
src/problems/cses/problem_1713/: main.cpp
src/problems/cses/problem_1754/: main.cpp
src/problems/cses/problem_1755/: main.cpp
src/problems/cses/problem_2205/: main.cpp
src/problems/sample/: CMakeLists.txt  main.cpp
src/problems/spoj/: CMakeLists.txt
src/problems/spoj/problem_1/: main.cpp
src/problems/usaco/: CMakeLists.txt
src/problems/usaco/problem_2015_dec_bronze_1/: main.cpp
src/problems/usaco/problem_2016_jan_bronze_1/: main.cpp
src/problems/usaco/problem_2018_feb_bronze_1/: main  main.cpp
src/problems/usaco/problem_2019_open_bronze_1/: main.cpp
src/problems/usaco/problem_2020_dec_bronze_1/: main.cpp
test/: CMakeLists.txt
test/apps/: CMakeLists.txt
test/apps/calc_console/: CMakeLists.txt  tui_test.cpp
test/libs/calc/: CMakeLists.txt  calc_test.cpp
tools/: create_problem.sh  iwyu_tool.py  run_clang_format.py  run_clang_tidy.py
(+33 files in other folders)
